# integer_encoding

./: MANIFEST.in  README.rst  setup.cfg  tox.ini
src/: integer_encoding.py
tests/: test_integer_encoding.py
