[metadata]
name = integer_encoding
version = 0.1
author = Gregg Gajic
author_email = gregg.gajic@gmail.com
summary = A simple python module that encodes integers into arbitrary-base element sequences.
description-file = README.rst
home_page = https://github.com/gg/integer_encoding
project_url =
  Source repository,https://github.com/gg/integer_encoding
license = UNLICENSE
maintainer = Gregg Gajic
maintainer-email = gregg.gajic@gmail.com
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Natural Language :: English
  Programming Language :: Python :: 2.5
  Programming Language :: Python :: 2.6
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.1
  Programming Language :: Python :: 3.2
  Topic :: Software Development :: Libraries :: Python Modules
  License :: Public Domain

requires-dist = distutils2
Requires-Python: >= 2.5
Download-URL = http://pypi.python.org/pypi/integer_encoding

[files]
modules = src/integer_encoding
extra_files =
  setup.py
  README.rst
  MANIFEST.in
  tox.ini
  UNLICENSE
